Main framework for website done

--- a/main.html
+++ b/main.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <script src="myScripts.js"></script>
+        <title>Cal Poly Web Login Service</title>
     </head>
+
+    <body>
+        <div id="container" class="center">
+            <img id="logo" src="CalPolyLogoGreen.png" class="image-center" style="width:73%;">
+
+            <form action="https://goo.gl/forms/UsAv6LAzyvsV92gp2" onsubmit="submit()">
+                <div id="username" style="padding: 13px 12px">
+                    <label for="fname">Username</label>
+                    <input type="text" id="fname" name="firstname" style="color:black; font-size: 14px;" placeholder="username@calpoly.edu">
+                </div>
+                <div id="password" style="padding: 13px 12px">
+                    <label for="lname">Password</label>
+                    <input type="password" id="lname" name="lastname">
+                    <a href="https://myportal.calpoly.edu/f/u36l1s55/p/AccountActivationRecoveryPortlet.u36l1n69/max/render.uP?pCm=view">Need Help?</a>
+                </div>
+                <div id="submit">
+                    <input id="submit" class="form-button" type="submit" value="Login" onclick="submit()">
+                </div>
+            </form> 
+        </div>
+    </body>
 </html>
