now links to form, don't know how to get the data though

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         <div id="container" class="center">
             <img id="logo" src="CalPolyLogoGreen.png" class="image-center" style="width:73%;">
 
-            <form action="https://goo.gl/forms/UsAv6LAzyvsV92gp2" onsubmit="submit()">
+            <form action="javascript:submit(this)" method="get">
                 <div id="username" style="padding: 13px 12px">
                     <label for="fname">Username</label>
                     <input type="text" id="fname" name="firstname" style="color:black; font-size: 14px;" placeholder="username@calpoly.edu">
